[package]

name = "square-deal-sdl2"
version = "0.0.0"
authors = ["doug@oatsmail.com"]

[dependencies.piston]

git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.sdl2_game_window]

git = "https://github.com/PistonDevelopers/sdl2_game_window.git"

[dependencies.graphics]

git = "https://github.com/PistonDevelopers/rust-graphics.git"

[dependencies.opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[[bin]]

name = "square-deal-game"
path = "./src/game.rs"
